--- a/style.css
+++ b/style.css
@@ -452,26 +452,12 @@ input:focus {
 
   .wrapper,
   .contenedor-ingresos,
-  .contenedor-presupuestos {
+  .contenedor-presupuestos
+  .contenedor-visualizacion {
     width: 90%;
     padding: 1rem;
     margin-top: 5vh;
     max-height: 80vh;
-  }
-
-  .contenedor-visualizacion {
-    width: 100%;
-    padding: 1rem;
-    margin-top: 3vh;
-    min-height: auto;
-    max-height: none;
-  }
-
-  .visualizacion canvas {
-    width: 100% !important; 
-    height: 300px !important; 
-    margin-top: 1rem;
-    padding: 0.5rem;
   }
 
   .intro {
