--- a/style.css
+++ b/style.css
@@ -452,12 +452,11 @@ input:focus {
 
   .wrapper,
   .contenedor-ingresos,
-  .contenedor-presupuestos
+  .contenedor-presupuestos,
   .contenedor-visualizacion {
     width: 90%;
     padding: 1rem;
     margin-top: 5vh;
-    max-height: 80vh;
   }
 
   .intro {
