--- a/style.css
+++ b/style.css
@@ -283,6 +283,7 @@ main {
   padding: 2rem; 
   margin-top: 17vh;
   box-shadow: 0 8px 20px rgb(21, 21, 21);
+  animation: deslizar 0.8s ease forwards;
   overflow-y: auto;
 }
 
@@ -359,6 +360,7 @@ main {
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  animation: deslizar 0.8s ease forwards;
 }
 
 .alerta-limite {
@@ -390,6 +392,7 @@ main {
   padding: 2rem; 
   margin-top: 17vh;
   box-shadow: 0 8px 20px rgb(21, 21, 21);
+  animation: deslizar 0.8s ease forwards;
 }
 
 .visualizacion {
@@ -454,6 +457,7 @@ input:focus {
     width: 90%;
     padding: 1rem;
     margin-top: 5vh;
+    animation: none;
   }
 
   .intro {
