--- a/style.css
+++ b/style.css
@@ -274,7 +274,7 @@ main {
   padding: 2rem; 
   margin-top: 17vh;
   box-shadow: 0 8px 20px rgb(21, 21, 21);
-  animation: deslizar 0.8s ease forwards;
+  animation: none;
   overflow-y: auto;
 }
 
@@ -351,7 +351,7 @@ main {
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  animation: deslizar 0.8s ease forwards;
+  animation: none;
 }
 
 .alerta-limite {
@@ -383,7 +383,7 @@ main {
   padding: 2rem; 
   margin-top: 17vh;
   box-shadow: 0 8px 20px rgb(21, 21, 21);
-  animation: deslizar 0.8s ease forwards;
+  animation: none;
 }
 
 .visualizacion {
