--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ body {
     max-width: 300px; 
     height: auto;
     margin-bottom: -10vh;
-    animation: deslizar 0.8s ease forwards;
+    animation: deslizar 0.6s ease-out forwards;
 }
 
 .logo-registro {
@@ -51,7 +51,7 @@ body {
     height: auto;
     margin-bottom: -10vh;
     margin-top: 6vh;
-    animation: deslizar 0.8s ease forwards;
+    animation: deslizar 0.6s ease-out forwards;
 }
 
 .body-registro {
@@ -100,15 +100,12 @@ form div.incorrect input {
   border-radius: 15px;
   box-shadow: 0 0 15px rgba(0,0,0,0.1);
   margin-top: 5rem;
-  animation: deslizar 0.8s ease forwards;
+  animation: deslizar 0.6s ease-out forwards;
 }
 
 @keyframes deslizar {
   from { transform: scale(0.9); opacity: 0; }
   to { transform: scale(1); opacity: 1; }
-}
-.contenido-animado {
-  animation: scaleIn 0.6s ease-out forwards;
 }
 
 h1, h2 {
@@ -252,7 +249,7 @@ nav button {
 main {
   padding: 1rem 3rem;
   flex-grow: 1;
-  animation: deslizar 0.8s ease forwards;
+  animation: deslizar 0.6s ease-out forwards;
 }
 
 .body-ingresos {
@@ -280,7 +277,7 @@ main {
   padding: 2rem; 
   margin-top: 17vh;
   box-shadow: 0 8px 20px rgb(21, 21, 21);
-  animation: deslizar 0.8s ease forwards;
+  animation: deslizar 0.6s ease-out forwards;
   overflow-y: auto;
 }
 
@@ -357,7 +354,7 @@ main {
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  animation: deslizar 0.8s ease forwards;
+  animation: deslizar 0.6s ease-out forwards;
 }
 
 .alerta-limite {
@@ -389,7 +386,7 @@ main {
   padding: 2rem; 
   margin-top: 17vh;
   box-shadow: 0 8px 20px rgb(21, 21, 21);
-  animation: deslizar 0.8s ease forwards;
+  animation: deslizar 0.6s ease-out forwards;
 }
 
 .visualizacion {
