--- a/style.css
+++ b/style.css
@@ -56,6 +56,7 @@ body {
   background-color: rgb(0, 0, 0);
   background-size: cover;
   background-position: center;
+  margin-top: -4vh;
 }
 
 .body-inicio-sesion {
